# django-polls

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/corelib/: result.py
src/mysite/: settings.py  urls.py
src/polls/: forms.py  urls.py  views.py
src/polls/migrations/: 0001_initial.py
src/polls/models/: __init__.py  choice.py  question.py  user.py
src/polls/services/: __init__.py  polls_service.py  question_choice_service.py  question_service.py
src/polls/tests/: test_polls_api.py
vanilla/: .env.tmpl  Dockerfile  Dockerfile.dev  asgi.py  compose.yaml  requirements.txt  settings.py  urls.py  wsgi.py
vanilla/nilla/: admin.py  apps.py  models.py
vanilla/nilla/domain/accounts/: urls.py
vanilla/nilla/domain/polls/: admin.py  test_views.py
vanilla/nilla/domain/polls/models/: __init__.py  question.py
vanilla/nilla/migrations/: 0001_initial.py  0002_question_questionchoice.py  0003_questionchoice_votes.py
vanilla/nilla/models/: __init__.py  polls_questionchoice.py
vanilla/nilla/services/accounts/: views.py
vanilla/nilla/services/accounts/models/: user.py
vanilla/nilla/services/polls/: urls.py  views.py
vanilla/nilla/services/polls/models/: questionchoice.py
vanilla/nilla/templates/polls/: detail.html  results.html
vanilla/vanilla/: settings.py  urls.py
