[tool.poetry]
name = "vanilla"
version = "0.1.0"
description = ""
authors = ["Wanseo Kim <wanseo@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
