[tool.poetry]
name = "vanilla"
version = "0.1.0"
description = ""
authors = ["Wanseo Kim <wanseo@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.14"
psycopg = "3.1.8"
psycopg-binary = "3.1.8"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
